test/parse/expr/bad-const-i32-trailing.txt
;;; ERROR: 1
(module (func i32.const 100x))
(;; STDERR ;;;
out/test/parse/expr/bad-const-i32-trailing.txt:2:25: error: unexpected token "100x"
(module (func i32.const 100x))
                        ^^^^
out/test/parse/expr/bad-const-i32-trailing.txt:2:29: error: syntax error, unexpected ), expecting NAT or INT or FLOAT
(module (func i32.const 100x))
                            ^
;;; STDERR ;;)
